--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,8 @@
     "typescript": "~5.8.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.4.0"
+    "@openzeppelin/contracts": "^5.4.0",
+    "axios": "^1.13.2",
+    "dotenv": "^17.2.3"
   }
 }
